# usac_learn

./: .gitignore  README.md
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/drcTool/drcToolDecoder/: CMakeLists.txt
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/drcTool/drcToolDecoder/TestDataIn/: audio2chConst_QMF64_imag.qmf  audio2chConst_QMF64_real.qmf
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/drcTool/drcToolDecoder/TestDataOut/: audioOut1_QMF64_real.qmf  audioOut1_STFT256_imag.stft  audioOut1_STFT256_real.stft
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/peakLimiter/peakLimiterLib/: CMakeLists.txt
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/peakLimiter/peakLimiterLib/include/: peakLimiterlib_errorcodes.h
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcCommon/: CMakeLists.txt  uniDrc.h  uniDrcCommon.h  uniDrcHostParams.c
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcGainDecoderCmdl/: CMakeLists.txt
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcInterfaceDecoderLib/: CMakeLists.txt
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcInterfaceDecoderLib/include/: uniDrcInterfaceDecoder_api.h
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcInterfaceDecoderLib/src/: uniDrcInterfaceDecoder.c  uniDrcInterfaceDecoder.h  uniDrcInterfaceParser.c
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcInterfaceEncoderCmdl/: CMakeLists.txt
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcInterfaceEncoderCmdl/TestDataIn/: uniDrcInterface1.xml
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcInterfaceEncoderCmdl/TestDataOut/: mpegh3daParams13.txt  mpegh3daParams15.txt  mpegh3daParams16.txt  mpegh3daParams2.txt  mpegh3daParams20.txt  mpegh3daUniDrcInterface11.bit  mpegh3daUniDrcInterface15.bit  mpegh3daUniDrcInterface16.bit  mpegh3daUniDrcInterface18.bit  mpegh3daUniDrcInterface2.bit  mpegh3daUniDrcInterface3.bit  mpegh3daUniDrcInterface5.bit  mpegh3daUniDrcInterface7.bit  mpegh3daUniDrcInterface8.bit  uniDrcInterface1.bit  uniDrcInterface12.bit  uniDrcInterface16.bit  uniDrcInterface17.bit  uniDrcInterface19.bit  uniDrcInterface1_AMD1.bit  uniDrcInterface21.bit  uniDrcInterface24.bit  uniDrcInterface25.bit  uniDrcInterface28.bit  uniDrcInterface29.bit  uniDrcInterface3.bit  uniDrcInterface31.bit  uniDrcInterface33.bit  uniDrcInterface34.bit  uniDrcInterface35.bit  uniDrcInterface37.bit  uniDrcInterface37_AMD1.bit  uniDrcInterface38_AMD1.bit  uniDrcInterface7.bit  uniDrcInterface8.bit  uniDrcInterface9.bit
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcInterfaceEncoderCmdl/src/: uniDrcInterfaceConfig1.c  uniDrcInterfaceConfig2.c  uniDrcInterfaceConfig4.c  uniDrcInterfaceConfig5.c  uniDrcInterfaceConfig6.c  uniDrcInterfaceConfig7.c  xmlParserInterface.c  (+1 more)
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/tools/fftlib/: CMakeLists.txt
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/tools/fftlib/src/: fftlib.c  fftlib_example.c
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/tools/qmflib/: CMakeLists.txt
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/tools/qmflib/include/: qmflib.h  qmflib_const.h
MPEG-D_USAC/mpegD_drc/MPEG_D_DRC_refsoft/tools/wavIO/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/doc/: FolderStructure.txt  InstallAndUse.doc
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/modules/drcTool/drcToolEncoder/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/modules/loudnessNormalizer/loudnessNormalizerCmdl/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcBitstreamDecoderCmdl/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcCommon/: uniDrcInterface.h
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcGainDecoderLib/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcInterfaceDecoderCmdl/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcInterfaceEncoderLib/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcSelectionProcessCmdl/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/modules/uniDrcModules/uniDrcSelectionProcessLib/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/scripts/: compile.bat  decode.bat  decode_AMD1.bat  decode_AMD1.sh  decode_cmdlToolChain.bat  encode.bat  encode.sh  encode_AMD1.bat  encode_AMD1.sh  encode_uniDrcInterface_AMD1.bat  encode_uniDrcInterface_AMD1.sh  test_selectionProcess.bat  test_selectionProcess.sh
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/tools/dmx/dmxCmdl/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/tools/fftlib/include/: fftlib.h
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/tools/fftlib/src/: fftlib_example.h
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/tools/qmflib/include/: qmflib_hybfilter.h
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/tools/qmflib/src/: qmflib.c  qmflib_example.c  qmflib_hybfilter.c
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/tools/wavIO/include/: wavIO.h
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/tools/wavIO/src/: wavIO.c
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/tools/writeonlybitbuf/: CMakeLists.txt
MPEG-D_USAC_refSoft_src_v02_03_00_20190711/mpegD_drc/MPEG_D_DRC_refsoft/tools/xmlReaderLib/: CMakeLists.txt
(+1346 files in other folders)
